# openscenegraph-cross-platform-guide-application

./: CMakeLists.txt  README.md
android/app/: CMakeLists-osgNativeLib.txt
android/app/src/main/cpp/: osgNativeLib.cpp
android/app/src/main/java/org/opengamestudio/osgapp/: EGLview.java  RenderActivity.java  osgNativeLib.java
android/app/src/main/res/layout/: activity_render.xml
android/src-gen/: Features.txt  functions.h  main.h
desktop/src/: App.h  Logger.h  Logging.h  Rendering.h
desktop/src-gen/: Features.txt  functions.h
desktop/src/Logging/: LoggingPlatformDefault.h
desktop/src/Platform/: PlatformAndroid.h  PlatformIOS.h
desktop/src/Rendering/: RenderingPlatformDesktop.h
features/: INPUT_ANDROID.cpp  INPUT_EMSCRIPTEN.cpp  LOGGING_ANDROID.cpp  LOGGING_DEFAULT.cpp  PLUGINS_STATIC.cpp  RENDERING_ANDROID.cpp  RENDERING_DEFAULT.cpp  RENDERING_DESKTOP.cpp  RENDERING_IOS.cpp  VBO.cpp
features/src/: functions.h  main.h
ios/: CMakeLists-osgNativeLib.txt  CMakeLists.txt  create_single_osglib  create_universal_osg_libs
ios/project/: RenderVC.h  RenderVC.mm  RenderVC.storyboard
ios/src/: RenderVC.mm  osgNativeLib.cpp  osgNativeLib.h
ios/src-gen/: Features.txt  functions.h  main.h
src/: App.h  AppLogging.h  AppRendering.h  Features.txt  Logger.h  Logging.h  LoggingPlatform.h  Rendering.h  Shaders.h  functions.h  main.cpp  main.h
src-gen/: main.h
src/AppRendering/: AppRenderingPlatformAndroid.h  AppRenderingPlatformDesktop.h  AppRenderingPlatformIOS.h
src/Logging/: LoggingPlatformAndroid.h  LoggingPlatformDefault.h
src/Platform/: PlatformAndroid.h  PlatformDesktop.h  PlatformIOS.h
src/Rendering/: RenderingPlatformIOS.h
web/: CMakeLists.txt  Makefile  OpenSceneGraph-Emscripten.patch
web/src/: Makefile  OSGLogger.h  VBOSetupVisitor.h  WebApplication.h  main.cpp
web/src-gen/: Features.txt  functions.h  main.h
